Tue Oct 21 00:46:24 1997  Tom Tromey  <tromey@cygnus.com>

	* lex2.test: Removed; @LEXLIB@ no longer required.

	* depacl2.test: Use -I, not --acdir.

	* install.test: New file.
	* ammissing.test: New file.

Sun Sep 28 17:19:52 1997  Tom Tromey  <tromey@cygnus.com>

	* cxxnoc.test: Changed to reflect MKDEP change.

Wed Sep 24 16:01:59 1997  Tom Tromey  <tromey@cygnus.com>

	* output5.test: New file.

	* depend3.test: New file.

Mon Aug 25 17:24:42 1997  Tom Tromey  <tromey@cygnus.com>

	* cygwin32.test: Use AM_EXEEXT, not AM_CYGWIN32.

Tue Aug  5 20:33:33 1997  Tom Tromey  <tromey@cygnus.com>

	* libobj6.test: New file.

Mon May 26 22:47:36 1997  Tom Tromey  <tromey@cygnus.com>

	* depend.test: Fixed test.

Sat May 10 18:28:14 1997  Tom Tromey  <tromey@cygnus.com>

	* depend2.test: Fixed test; added another check.

Sun May  4 15:47:24 1997  Tom Tromey  <tromey@cygnus.com>

	* xsource.test: New file.

Tue Apr 29 19:08:47 1997  Tom Tromey  <tromey@cygnus.com>

	* cond.test, cond2.test: New files from Ian Taylor.

Sun Apr 27 21:07:49 1997  Tom Tromey  <tromey@cygnus.com>

	* confsub.test: Fixed bug.

Fri Apr 25 12:30:22 1997  Tom Tromey  <tromey@cygnus.com>

	* conf2.test: New file.

Tue Apr  8 19:26:07 1997  Tom Tromey  <tromey@cygnus.com>

	* ansi.test, empty.test, exsource.test, insh2.test, man.test,
	mkinst2.test, texinfo.test, texinfo2.test: Use $MAKE.

	* defs (MAKE): Define.

Mon Apr  7 17:35:49 1997  Tom Tromey  <tromey@cygnus.com>

	* version2.test: New file.

Wed Apr  2 00:12:26 1997  Tom Tromey  <tromey@cygnus.com>

	* ldadd.test: New file.

Fri Mar 28 23:36:04 1997  Tom Tromey  <tromey@cygnus.com>

	* stamph.test: New file.

Thu Mar 27 18:10:47 1997  Tom Tromey  <tromey@cygnus.com>

	* lisp.test: New file.

Sat Mar 22 01:14:03 1997  Tom Tromey  <tromey@cygnus.com>

	* cygwin32.test: New file.

Thu Mar 20 00:34:33 1997  Tom Tromey  <tromey@cygnus.com>

	* exsource.test: Exit if not using GNU make.

Tue Mar 18 22:36:34 1997  Tom Tromey  <tromey@cygnus.com>
