@@ -1,3 +1,3 @@
-@set UPDATED 17 October 1997
+@set UPDATED 24 October 1997
 @set EDITION 1.2c
 @set VERSION 1.2c
