@@ -26,7 +26,8 @@ output3.test output4.test colneq2.test subst.test defun2.test \
 yaccpp.test texinfo3.test texinfo4.test tagsub.test cxxlibobj.test \
 seenc.test cygwin32.test lisp.test stamph.test ldadd.test \
 version2.test conf2.test cond.test cond2.test xsource.test \
-libobj6.test depend3.test output5.test ammissing.test install.test
+libobj6.test depend3.test output5.test ammissing.test install.test \
+libobj7.test
 
 EXTRA_DIST = defs $(TESTS)
 
