@@ -1,3 +1,7 @@
+Sat Oct 25 00:04:04 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* libobj7.test: New file.
+
 Tue Oct 21 00:46:24 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* lex2.test: Removed; @LEXLIB@ no longer required.
